# rust-launcher

./: .gitignore  README.md  README.ru.md  index.html  package-lock.json  package.json  tailwind.config.cjs
%USERPROFILE%/.tauri/: myapp.key  myapp.key.pub
.github/workflows/: build.yml  ci.yml  release-tauri.yml
.tauri/: mc16launcher.key  mc16launcher.key.pub
docs/: build.md  java-settings.md
src/: App.css  App.tsx  index.css  uiSounds.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  ProxyAuthBootstrap.java  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  discord_rpc.rs  ely_auth.rs  game_provider.rs  java_runtime.rs  lib.rs  main.rs  ms_auth.rs
src/i18n/: index.ts
src/locales/: en.json  ru.json
src/settings-ui/: SettingsComponents.tsx
src/tabs/: AccountsTab.tsx  FriendsTab.tsx  JavaSettings.tsx  ModpackTab.tsx  ModsTab.tsx  PlayTab.tsx  SettingsTab.tsx  SupabaseAccountPanel.tsx
src/types/: java-settings.d.ts  java-settings.schema.json  lucide-react.d.ts  modpack-tab.d.ts
