[package]
name = "mc16launcher"
version = "2.0.18"
description = "An optimized Minecraft launcher for creating modpacks, downloading mods directly, and launching the game with custom settings."
authors = ["launcherdev11"]
edition = "2021"


[lib]
name = "mc16launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
futures-util = "0.3"
dirs = "5"
zip = "2"
ignore = "0.4"
rand = "0.8"
urlencoding = "2"
sha1 = "0.10"
once_cell = "1"
dotenvy = "0.15.7"
sysinfo = "0.38.2"
base64 = "0.22"
discord-rich-presence = "1.1.0"

